Lambda/grammar.txt
BindList = ID
         | ID "," BindList
         ;
Expression = AbstractionExpression ;
AbstractionExpression = ApplicationExpression
                      | "\\" BindList "." AbstractionExpression
                      ;
ApplicationExpression = PrimaryExpression
                      | PrimaryExpression ApplicationExpression
                      ;
PrimaryExpression = "(" Expression ")"
                  | ID
                  ;
